# Hospital-Managment-System

./: CMakeLists.txt  appointment.cpp  appointment.h  doctor.cpp  doctor.h  hospital.cpp  hospital.h  main  main.cpp  nurse.cpp  nurse.h  patient.cpp  patient.h
